--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header Start *****************************************************-->
     <header class="header">
-        <h2>Efsane motor</h2>
+        <h2>Efsane Motor</h2>
         <p>Motosikletler hakkında her şey</p>
      
      <!-- Navbar Start **************************************************** -->
@@ -71,7 +71,7 @@
     
     <!-- Footer Start ********************************************************-->
     <footer class="footer">
-        <h1>Das Auto</h1>
+        <h1>Efsane Motor</h1>
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem ipsum.</p>
     </footer>
