İletişim Sayfası Eklendi

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
      
      <!-- Navbar Start **************************************************** -->
         <nav class="navbar">
-            <a href="dasauto.html">Anasayfa</a>
+            <a href="dasauto.html target=-blank">Anasayfa</a>
             <a href="ürünler.html">Modeller</a>
-            <a href="iletişimpage.html">İletişim</a>
+            <a href="iletisim.html" target="_blank">İletişim</a>
         </nav> 
         <!-- Navbar End ****************************************************** -->
     </header>
@@ -67,6 +67,7 @@
             </article>
         </section>
     </main>
+    <br>
     <!-- Main Section End *************************************************** -->
     
     <!-- Footer Start ********************************************************-->
