--- a/iletisim.html
+++ b/iletisim.html
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletişim</title>
+    <link rel="stylesheet" href="css/iletisim.css">
+    
 </head>
 <body>
-    <a href="index.html">
+    <a href="index.html" target="_blank">
         Ana Sayfaya Git
     </a>
     
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p>
         <ul>
-            <li>Lorem ipsum dolor sit.</li>
+            <li >Lorem ipsum dolor sit.</li>
             <li>Consequatur, id. Similique, quia?</li>
             <li>Voluptates neque modi omnis.</li>
         </ul>
     </p>
     <p>
-        <ul>
+        <ul style="color: red;">
             <li>Lorem ipsum dolor sit.</li>
             <li>Itaque voluptates soluta dicta.</li>
             <li>Quam in numquam omnis.</li>
